# serenity-mental-health-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyproject_optimized.toml  start.sh
.github/workflows/: build-and-push-optimized.yml
app/: main.py
app/api/: auth.py  chat.py  voice.py
app/core/: database.py  security.py
app/models/: chat_message.py  user.py
app/schemas/: user.py
app/services/: auth_service.py  chat_service.py  chatbot_service.py  whisper_service.py
app/utils/: location.py
classifier/: emotion_inference.py  intent_classifier.py
evaluation/: dataset_builder.py  eval_runner.py  gemini_llm.py  groq_llm.py  rag_wrapper.py
notebooks/: Emtion_Classifier.ipynb  Intent_Classifier.ipynb  Language_Detection.ipynb
rag/: crisis_handler.py  hotlines.py  rag_pipeline.py  rag_state.py
scripts/: build_embeddings.py
tests/: conftest.py  test_auth.py  test_chat.py  test_health.py  test_root.py
